k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: typescript-api
  labels:
    name: typescript-api
    environment: production
